Table style added.

--- a/main.css
+++ b/main.css
@@ -32,6 +32,7 @@ header {
 	height: 950px;
 	background-image: url(img/main_background.jpg);
 	border:rgba(0,0,0,0) 1px solid;
+	overflow: hidden;
 }
 
 #first-text {
@@ -62,7 +63,8 @@ header {
 	background: #050505;
 	color: white;
 	box-shadow: 0 -30px 20px 40px #050505;
-	height: 500px;
+	min-height: 500px;
+	overflow: hidden;
 }
 
 .category_black h2 {
@@ -81,32 +83,33 @@ header {
 	margin: 1em;
 	background: rgba(255, 255, 255, 0);
 	transition: background 5s;
-	-webkit-transition: background 5s;
+	-webkit-transition: text-shadow 0.3s;
+	cursor: default;
 }
 
 #why_this_is li:hover {
-	background: -webkit-radial-gradient(rgba(255,255,255,0.6) 0%, rgba(0,0,0,0) 80%);
+/* 	background: -webkit-radial-gradient(rgba(255,255,255,0.6) 0%, rgba(0,0,0,0) 80%); */
+	text-shadow: 0 0 15px white;
 	}
 
 #why_this_is img {
-	max-width: 100%;
-	border-radius: 13px;
+	width: 100%;
 }
 
 #why_this_is div {
 	width: 40%;
 	position: relative;
 	display: inline-block;
-	min-width: 322px;
+	margin-bottom: 40px;
 }
 
-#list {
-	left: 4%;
+.left_side {
+	left: 5%;
 }
 
-#test {
+.right_side {
 	float: right;
-	right: 4%
+	right: 5%
 }
 
 
@@ -121,9 +124,9 @@ header {
 }
 
 .category_color {
-	height: 500px;
-	
+	min-height: 500px;
 	padding: 50px 0;
+	overflow: hidden;
 }
 
 .category_color h2 {
@@ -136,21 +139,23 @@ header {
 
 .category_color div {
 	width: 40%;
+	position: relative;
 	display: inline-block;
-	margin: 0 7%;
-	background: rgba(255,255,255, 0.8);
-	max-width: 300px;
+	overflow: hidden;
 	border-radius: 20px;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;	
 }
 
 .category_color img {
 	width: 100%;
-	opacity: 0.7;
+	max-width: 400px;
 }
 
 #html_dog_text {
-	padding: 40px;
+	padding: 25px 20px 25px 40px;
 	font-size: 1.3em;
+	background: rgba(255,255,255,.8);
 }
 
 /*************************
@@ -161,3 +166,20 @@ header {
 	box-shadow: 0 0 50px 1px white;
 }
 
+table {
+	margin: 20px auto;
+	border-collapse: separate;
+	width: 85%;
+}
+
+tr, td {
+	border-bottom: 1px solid rgba(255,255,255,0.6);	
+	padding: 5% 0 5% 0;
+	text-align: center;
+	margin-right: 1%;
+}
+
+table img {
+	max-width: 100%;
+	max-height: 150px;
+}
